--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,12 @@
     "@tabler/icons-react": "^3.34.1",
     "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.11.0",
+    "bootstrap": "^5.3.7",
     "clsx": "^2.1.1",
     "lucide-react": "^0.540.0",
     "motion": "^12.23.12",
     "react": "^19.1.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.1",
     "react-toastify": "^11.0.5",
